# knapsack-example-gurobi-cookiecutter

./: LICENSE  README.md  pyproject.toml
knapsack/: __init__.py  _exceptions.py  cli.py
knapsack/models/: base.py  my_models.py
scripts/: demo.py  demo_callback.py  demo_pipeline.py  demo_run.py
